<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Memory">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="408dp"
        android:layout_height="419dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/memRecycle"
            android:layout_width="408dp"
            android:layout_height="419dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/memory_events">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/noResult2"
            android:layout_width="163dp"
            android:layout_height="55dp"
            android:layout_marginTop="32dp"
            android:text="@string/NoResults"
            android:textAlignment="center"
            android:textSize="16sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.432"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6D4C8">

            <ImageView
                android:id="@+id/imageName"
                android:layout_width="168dp"
                android:layout_height="204dp"
                android:layout_marginEnd="1dp"
                app:layout_constraintEnd_toStartOf="@+id/AddressName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/AddressName"
                android:layout_width="242dp"
                android:layout_height="18dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="4dp"
                android:text="Address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageName"
                app:layout_constraintTop_toBottomOf="@+id/VenueName" />

            <TextView
                android:id="@+id/DateName"
                android:layout_width="221dp"
                android:layout_height="28dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="13dp"
                android:text="TextView"
                android:textAllCaps="true"
                android:textColor="#287518"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageName"
                app:layout_constraintTop_toBottomOf="@+id/AddressName" />

            <TextView
                android:id="@+id/EventName"
                android:layout_width="231dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="9dp"
                android:text="TextView"
                android:textColor="#153F7E"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/PriceName"
                android:layout_width="209dp"
                android:layout_height="26dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="25dp"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageName"
                app:layout_constraintTop_toBottomOf="@+id/DateName" />

            <TextView
                android:id="@+id/VenueName"
                android:layout_width="228dp"
                android:layout_height="35dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="13dp"
                android:text="TextView"
                android:textColor="#EF2D2D"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageName"
                app:layout_constraintTop_toBottomOf="@+id/EventName" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="408dp"
        android:layout_height="101dp"
        android:layout_marginStart="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <EditText
            android:id="@+id/Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:ems="10"
            android:hint="@string/Name"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/Comments"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Name" />

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="46dp"
            android:onClick="addButton"
            android:text="@string/add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>